fix buttons look on mobile

--- a/client/src/components/SignUpAlert/SignUpAlert.module.css
+++ b/client/src/components/SignUpAlert/SignUpAlert.module.css
@@ -50,6 +50,8 @@
 }
 
 .login {
+  height: 30px;
+  color: var(--black);
   background-color: transparent;
   border: 1px solid var(--black);
   border-radius: 20px;
@@ -65,6 +67,7 @@
 }
 
 .signup {
+  height: 30px;
   border: 1px solid var(--black);
   background-color: var(--black);
   color: var(--white);
